# ChurnLab

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  churnlab.code-workspace  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.streamlit/: config.toml
app/: app.py  babel.cfg  streamlit_app.py
app/components/: __init__.py  kpi_card.py  model_selector.py  navbar.py  prediction_result.py
app/locales/en_US/LC_MESSAGES/: messages.mo  messages.po
app/locales/pt_BR/LC_MESSAGES/: messages.mo  messages.po
app/pages/: __init__.py  about.py  benchmark.py  overview.py  prediction.py  settings.py
app/services/: benchmark_service.py  constants.py  model_loader.py  prediction_service.py
app/utils/: __init__.py  i18n.py  plotly_config.py
data/processed/: telco_churn_clean.parquet
models/decision_tree/: decision_tree_artifacts.joblib  decision_tree_best_model.joblib
models/logistic_regression/: logistic_regression_artifacts.joblib  logistic_regression_best_model.joblib
models/random_forest/: random_forest_artifacts.joblib  random_forest_best_model.joblib
models/xgboost/: xgboost_artifacts.joblib  xgboost_best_model.joblib
notebooks/: 00_data_preparation.ipynb  01_data_preparation.ipynb  01_exploratory_analysis.ipynb  02_exploratory_analysis.ipynb  02_model_training.ipynb  03_model_training.ipynb
reports/: model_comparison.csv
scripts/: dev_tools.sh  ensure_ipykernel.sh  freeze.sh  get_data.sh  gitignore.sh  init.sh  sync.sh  test_tools.sh
