[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas[parquet]>=3.0.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
