[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas[parquet]>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
