[project]
name = "ChurnLab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas[parquet]>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
